Added mobile hamburger menu navigation

--- a/booking.html
+++ b/booking.html
@@ -87,7 +87,11 @@
                     <p>And Trading • Qatar</p>
                 </div>
             </div>
-            <ul>
+            <button class="mobile-menu-toggle" onclick="toggleMenu()" aria-label="Toggle menu">
+                <span class="hamburger-icon">☰</span>
+                <span class="close-icon">✕</span>
+            </button>
+            <ul id="navMenu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -273,7 +277,7 @@
                 <div class="alt-contact-icon">📧</div>
                 <h3>Email</h3>
                 <p>Send us detailed info about your project</p>
-                bookings@omoginteriors.com
+                <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="3f5d5050545651584c7f5052505856514b5a4d56504d4c115c5052">[email&#160;protected]</a>
             </div>
             <div class="alt-contact-card">
                 <div class="alt-contact-icon">📱</div>
@@ -333,17 +337,19 @@
             </div>
             <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="mailto:bookings@omoginteriors.com" style="color:white; text-decoration:none;">bookings@omoginteriors.com</a></p>
+<p>📧 <a href="/cdn-cgi/l/email-protection#35575a5a5e5c5b5246755a585a525c5b4150475c5a47461b565a58" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="8defe2e2e6e4e3eafecde2e0e2eae4e3f9e8ffe4e2fffea3eee2e0">[email&#160;protected]</span></a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
             <div class="footer-section">
                 <h3>Follow Us</h3>
                 <p>
-                    <a href="https://www.instagram.com/omogbackup?igsh=d3djYTNzZ3R1bGNh" target="_blank" style="color:white; text-decoration:none;">Instagram</a>
+                    <a href="https://www.instagram.com/omogbackup?igsh=d3djYTNzZ3R1bGNh" target="_blank" style="color:white; text-decoration:none;">Instagram</a><br>
+                    <a href="https://wa.me/97471021381" target="_blank" style="color:white; text-decoration:none;">WhatsApp</a>
                 </p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2026 OMO G Interior Decoration. All rights reserved.</p>
+            <p>&copy; 2026 OMO G Trading And Interior Decoration<br>CR No: 235664 • Doha, Qatar</p>
         </div>
+    </footer>
