--- a/services.html
+++ b/services.html
@@ -71,7 +71,11 @@
                     <p>And Trading • Qatar</p>
                 </div>
             </div>
-            <ul>
+            <button class="mobile-menu-toggle" onclick="toggleMenu()" aria-label="Toggle menu">
+                <span class="hamburger-icon">☰</span>
+                <span class="close-icon">✕</span>
+            </button>
+            <ul id="navMenu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html" class="active">Services</a></li>
@@ -252,7 +256,7 @@
             </div>
             <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
+<p>📧 <a href="/cdn-cgi/l/email-protection#6801060e07280705070f01061c0d1a01071a1b460b0705" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="1970777f76597674767e70776d7c6b70766b6a377a7674">[email&#160;protected]</span></a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
@@ -260,8 +264,3 @@
         <div class="footer-bottom">
             <p>&copy; 2026 OMO G Trading And Interior Decoration<br>CR No: 235664 • Doha, Qatar</p>
         </div>
-    </footer>
-
-    <a href="https://wa.me/97471021381" class="floating-whatsapp" target="_blank">💬</a>
-</body>
-</html>
