Refactor header and footer structure in services.html
Removed mobile menu toggle button and updated navigation structure. Added WhatsApp floating button and footer closing tag.

--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
 <body>
     <header id="header">
         <nav>
-            <div class="logo-container">
+            <a href="index.html" class="logo-container" style="text-decoration: none; color: inherit;">
                 <div class="logo-icon">
                     <img src="logo.png" alt="OMO G Logo" style="width: 100px; height: 100px; object-fit: contain;">
                 </div>
@@ -71,11 +71,7 @@
                     <p>And Trading • Qatar</p>
                 </div>
             </div>
-            <button class="mobile-menu-toggle" onclick="toggleMenu()" aria-label="Toggle menu">
-                <span class="hamburger-icon">☰</span>
-                <span class="close-icon">✕</span>
-            </button>
-            <ul id="navMenu">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html" class="active">Services</a></li>
@@ -256,7 +252,7 @@
             </div>
             <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="/cdn-cgi/l/email-protection#6801060e07280705070f01061c0d1a01071a1b460b0705" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="1970777f76597674767e70776d7c6b70766b6a377a7674">[email&#160;protected]</span></a></p>
+<p>📧 <a href="/cdn-cgi/l/email-protection#b8d1d6ded7f8d7d5d7dfd1d6ccddcad1d7cacb96dbd7d5" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="a1c8cfc7cee1cecccec6c8cfd5c4d3c8ced3d28fc2cecc">[email&#160;protected]</span></a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
@@ -264,3 +260,8 @@
         <div class="footer-bottom">
             <p>&copy; 2026 OMO G Trading And Interior Decoration<br>CR No: 235664 • Doha, Qatar</p>
         </div>
+    </footer>
+
+    <a href="https://wa.me/97471021381" class="floating-whatsapp" target="_blank">💬</a>
+</body>
+</html>
