--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@ margin: 0 auto;
 <body>
 <header id="header">
 <nav>
-<div class="logo-container">
+<a href="index.html" class="logo-container" style="text-decoration: none; color: inherit;">
 <div class="logo-icon">
 <img src="logo.png" alt="OMO G Logo" style="width: 100px; height: 100px; object-fit: contain;">
 </div>
@@ -88,11 +88,7 @@ margin: 0 auto;
 <p>And Trading • Qatar</p>
 </div>
 </div>
-<button class="mobile-menu-toggle" onclick="toggleMenu()" aria-label="Toggle menu">
-<span class="hamburger-icon">☰</span>
-<span class="close-icon">✕</span>
-</button>
-<ul id="navMenu">
+<ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="about.html">About Us</a></li>
 <li><a href="services.html">Services</a></li>
@@ -123,7 +119,7 @@ margin: 0 auto;
 <div class="contact-icon">📧</div>
 <h3>Email Us</h3>
 <p>Send us your queries and we'll respond within 24 hours</p>
-<a href="/cdn-cgi/l/email-protection#5f3c30312b3e3c2b1f3032303836312b3a2d36302d2c713c3032"><span class="__cf_email__" data-cfemail="f0939f9e84919384b09f9d9f97999e849582999f8283de939f9d">[email&#160;protected]</span></a>
+<a href="/cdn-cgi/l/email-protection#bbd8d4d5cfdad8cffbd4d6d4dcd2d5cfdec9d2d4c9c895d8d4d6"><span class="__cf_email__" data-cfemail="086b67667c696b7c486765676f61667c6d7a61677a7b266b6765">[email&#160;protected]</span></a>
 </div>
 <div class="contact-card">
 <div class="contact-icon">📱</div>
@@ -171,7 +167,7 @@ class="address-link">
 <div class="location-info">
 <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5c3f3332283d3f281c3331333b353228392e35332e2f723f3331">[email&#160;protected]</a></p>
+<p>📧 <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="92f1fdfce6f3f1e6d2fdfffdf5fbfce6f7e0fbfde0e1bcf1fdff">[email&#160;protected]</a></p>
 <p>📱 <a href="tel:+97471021381" style="text-decoration:none; color:inherit;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="text-decoration:none; color:inherit;">
                     Office 70, 2nd Floor Block F,<br>
@@ -209,7 +205,7 @@ class="address-link">
 </div>
 <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="/cdn-cgi/l/email-protection#0d6e6263796c6e794d6260626a646379687f64627f7e236e6260" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="93f0fcfde7f2f0e7d3fcfefcf4fafde7f6e1fafce1e0bdf0fcfe">[email&#160;protected]</span></a></p>
+<p>📧 <a href="/cdn-cgi/l/email-protection#c2a1adacb6a3a1b682adafada5abacb6a7b0abadb0b1eca1adaf" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="066569687267657246696b69616f687263746f6974752865696b">[email&#160;protected]</span></a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
@@ -218,10 +214,12 @@ class="address-link">
 <p>© 2026 OMO G Trading And Interior Decoration<br>CR No: 235664 • Doha, Qatar</p>
 </div>
 </footer>
-<a href="https://wa.me/97471021381" class="floating-whatsapp" target="_blank">
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="width: 28px; height: 28px; fill: white;">
-<path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/>
-</svg>
-</a>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-<script>
+    <a href="https://wa.me/97471021381" class="floating-whatsapp" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="width: 28px; height: 28px; fill: white;">
+            <path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/>
+        </svg>
+    </a>
+
+    <script src="script.js"></script>
+</body>
+</html>
