--- a/index.html
+++ b/index.html
@@ -99,8 +99,12 @@
 <h1>OMO G INTERIOR DECORATION</h1>
 <p>And Trading • Qatar</p>
 </div>
-</div>
-<ul>
+</a>
+<button class="mobile-menu-toggle" onclick="toggleMenu()" aria-label="Toggle menu">
+<span class="hamburger-icon">☰</span>
+<span class="close-icon">✕</span>
+</button>
+<ul id="navMenu">
 <li><a href="index.html" class="active">Home</a></li>
 <li><a href="about.html">About Us</a></li>
 <li><a href="services.html">Services</a></li>
@@ -249,7 +253,7 @@
 </div>
 <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="/cdn-cgi/l/email-protection#f79e999198b7989a98909e998392859e988584d994989a" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="01686f676e416e6c6e66686f756473686e73722f626e6c">[email&#160;protected]</span></a></p>
+<p>📧 <a href="/cdn-cgi/l/email-protection#01686f676e416e6c6e66686f756473686e73722f626e6c" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="452c2b232a052a282a222c2b3120372c2a37366b262a28">[email&#160;protected]</span></a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
@@ -328,18 +332,14 @@ const observer = new IntersectionObserver(
   (entries, observer) => {
     entries.forEach(entry => {
       if (entry.isIntersecting) {
-        const statItem = entry.target;
-        const statValue = statItem.querySelector("h2");
-        animateCounter(statValue);
-        observer.unobserve(statItem);
+        animateCounter(entry.target);
+        observer.unobserve(entry.target);
       }
     });
   },
-  {
-    threshold: 0.5
-  }
+  { threshold: 0.5 }
 );
-
-// Observe each stat item
-document.querySelectorAll('.stat-item').forEach(item => observer.observe(item));
+stats.forEach(stat => {
+observer.observe(stat);
+});
 });
