Add mobile menu toggle button to services.html

--- a/services.html
+++ b/services.html
@@ -70,8 +70,12 @@
                     <h1>OMO G INTERIOR DECORATION</h1>
                     <p>And Trading • Qatar</p>
                 </div>
-            </div>
-            <ul>
+            </a>
+            <button class="mobile-menu-toggle" onclick="toggleMenu()" aria-label="Toggle menu">
+                <span class="hamburger-icon">☰</span>
+                <span class="close-icon">✕</span>
+            </button>
+            <ul id="navMenu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html" class="active">Services</a></li>
@@ -252,7 +256,7 @@
             </div>
             <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="/cdn-cgi/l/email-protection#b8d1d6ded7f8d7d5d7dfd1d6ccddcad1d7cacb96dbd7d5" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="a1c8cfc7cee1cecccec6c8cfd5c4d3c8ced3d28fc2cecc">[email&#160;protected]</span></a></p>
+<p>📧 <a href="/cdn-cgi/l/email-protection#5f363139301f3032303836312b3a2d36302d2c713c3032" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="2f464149406f4042404846415b4a5d46405d5c014c4042">[email&#160;protected]</span></a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
@@ -261,7 +265,3 @@
             <p>&copy; 2026 OMO G Trading And Interior Decoration<br>CR No: 235664 • Doha, Qatar</p>
         </div>
     </footer>
-
-    <a href="https://wa.me/97471021381" class="floating-whatsapp" target="_blank">💬</a>
-</body>
-</html>
