--- a/portfolio.html
+++ b/portfolio.html
@@ -80,8 +80,12 @@
                     <h1>OMO G INTERIOR DECORATION</h1>
                     <p>And Trading • Qatar</p>
                 </div>
-            </div>
-            <ul>
+            </a>
+            <button class="mobile-menu-toggle" onclick="toggleMenu()" aria-label="Toggle menu">
+                <span class="hamburger-icon">☰</span>
+                <span class="close-icon">✕</span>
+            </button>
+            <ul id="navMenu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -188,7 +192,7 @@
             </div>
             <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="/cdn-cgi/l/email-protection#6d04030b022d0200020a040319081f04021f1e430e0200" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="7c15121a133c1311131b151208190e15130e0f521f1311">[email&#160;protected]</span></a></p>
+<p>📧 <a href="/cdn-cgi/l/email-protection#96fff8f0f9d6f9fbf9f1fff8e2f3e4fff9e4e5b8f5f9fb" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="462f28202906292b29212f283223342f2934356825292b">[email&#160;protected]</span></a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
@@ -200,11 +204,50 @@
         <div class="footer-bottom"><p>© 2026 OMO G Trading And Interior Decoration<br>CR No: 235664 • Doha, Qatar</p></div>
     </footer>
     <a href="https://wa.me/97471021381" class="floating-whatsapp" target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="width: 28px; height: 28px; fill: white;">
-            <path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/>
-        </svg>
+        <svg viewBox="0 0 448 512" style="width: 28px; height: 28px; fill: white;"><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg>
     </a>
-
-    <script src="script.js"></script>
+    <div id="lightbox" class="lightbox">
+        <span onclick="closeLightbox()" style="position:absolute; top:20px; right:30px; color:white; font-size:40px; cursor:pointer;">×</span>
+        <img id="lightbox-img" style="max-width:80%; max-height:70%; border:2px solid white;">
+        <div style="color:white; text-align:center; margin-top:15px;">
+            <h3 id="lightbox-title"></h3>
+            <p id="lightbox-description"></p>
+        </div>
+    </div>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="script.js"></script>
+    <script>
+        // Animations and Lightbox Scripting
+        document.addEventListener("DOMContentLoaded", () => {
+            const stats = document.querySelectorAll(".stat-item h2");
+            const obs = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        const h2 = entry.target;
+                        const target = parseInt(h2.innerText.replace(/\D/g,''));
+                        let count = 0;
+                        const timer = setInterval(() => {
+                            count += Math.ceil(target/20);
+                            if(count >= target) {
+                                h2.innerText = target + (h2.innerText.includes('+') ? '+' : (h2.innerText.includes('%') ? '%' : ''));
+                                clearInterval(timer);
+                            } else { h2.innerText = count; }
+                        }, 50);
+                    }
+                });
+            });
+            stats.forEach(s => obs.observe(s));
+        });
+        function openLightbox(el) {
+            if (el.classList.contains('instagram-item')) return;
+            const lb = document.getElementById('lightbox');
+            document.getElementById('lightbox-img').src = el.querySelector('img').src;
+            document.getElementById('lightbox-title').innerText = el.querySelector('h3').innerText;
+            document.getElementById('lightbox-description').innerText = el.querySelector('p').innerText;
+            lb.style.display = 'flex';
+        }
+        function closeLightbox() {
+            document.getElementById('lightbox').style.display = 'none';
+        }
+    </script>
 </body>
 </html>
