Add 'Book Now' link to navigation and footer

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 <li><a href="portfolio.html">Portfolio</a></li>
 <li><a href="renovations.html">Renovations</a></li>
 <li><a href="contact.html">Contact</a></li>
+                    <li><a href="booking.html">Book Now</a></li>
 <li><a href="booking.html" class="cta-nav">Book Now</a></li>
 </ul>
 </nav>
@@ -249,11 +250,12 @@
 <li><a href="portfolio.html">Portfolio</a></li>
 <li><a href="renovations.html">Renovations</a></li>
 <li><a href="contact.html">Contact</a></li>
+                    <li><a href="booking.html">Book Now</a></li>
 </ul>
 </div>
 <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="/cdn-cgi/l/email-protection#01686f676e416e6c6e66686f756473686e73722f626e6c" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="452c2b232a052a282a222c2b3120372c2a37366b262a28">[email&#160;protected]</span></a></p>
+<p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
@@ -340,6 +342,6 @@ const observer = new IntersectionObserver(
   { threshold: 0.5 }
 );
 stats.forEach(stat => {
-observer.observe(stat);
+  observer.observe(stat);
 });
 });
