--- a/booking.html
+++ b/booking.html
@@ -333,11 +333,12 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="booking.html">Book Now</a></li>
                 </ul>
             </div>
             <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="/cdn-cgi/l/email-protection#462429292d2f28213506292b29212f283223342f2934356825292b" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="c8aaa7a7a3a1a6afbb88a7a5a7afa1a6bcadbaa1a7babbe6aba7a5">[email&#160;protected]</span></a></p>
+<p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
