--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,7 @@
                 <li><a href="portfolio.html" class="active">Portfolio</a></li>
                 <li><a href="renovations.html">Renovations</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                    <li><a href="booking.html">Book Now</a></li>
                 <li><a href="booking.html" class="cta-nav">Book Now</a></li>
             </ul>
         </nav>
@@ -188,11 +189,12 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="booking.html">Book Now</a></li>
                 </ul>
             </div>
             <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="/cdn-cgi/l/email-protection#96fff8f0f9d6f9fbf9f1fff8e2f3e4fff9e4e5b8f5f9fb" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="462f28202906292b29212f283223342f2934356825292b">[email&#160;protected]</span></a></p>
+<p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
