--- a/services.html
+++ b/services.html
@@ -82,6 +82,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="renovations.html">Renovations</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                    <li><a href="booking.html">Book Now</a></li>
                 <li><a href="booking.html" class="cta-nav">Book Now</a></li>
             </ul>
         </nav>
@@ -252,11 +253,12 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="booking.html">Book Now</a></li>
                 </ul>
             </div>
             <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="/cdn-cgi/l/email-protection#5f363139301f3032303836312b3a2d36302d2c713c3032" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="2f464149406f4042404846415b4a5d46405d5c014c4042">[email&#160;protected]</span></a></p>
+<p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
