--- a/services.html
+++ b/services.html
@@ -82,7 +82,6 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="renovations.html">Renovations</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                    <li><a href="booking.html">Book Now</a></li>
                 <li><a href="booking.html" class="cta-nav">Book Now</a></li>
             </ul>
         </nav>
@@ -253,7 +252,6 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="booking.html">Book Now</a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -264,6 +262,10 @@
 </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2026 OMO G Trading And Interior Decoration<br>CR No: 235664 • Doha, Qatar</p>
-        </div>
-    </footer>
+            <p>&copy; 2026 OMO G Trading And Interior Decoration<br>CR No: 235664 • Doha, Qatar.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/>
+        </svg>
+    </a>
+
+    <script src="script.js"></script>
+</body>
+</html>
