--- a/renovations.html
+++ b/renovations.html
@@ -310,6 +310,7 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="booking.html">Book Now</a>a></li>
                 </ul>
             </div>
             <div class="footer-section">
