--- a/services.html
+++ b/services.html
@@ -252,7 +252,7 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="booking.html">Book Now</a></li>
+                    <li><a href="contact.html">Book Now</a></li>
                 </ul>
             </div>
             <div class="footer-section">
