--- a/services.html
+++ b/services.html
@@ -262,9 +262,9 @@
 <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2026 OMO G Trading And Interior Decoration<br>CR No: 235664 • Doha, Qatar.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/>
-        </svg>
+       <div class="footer-bottom">
+            <p>&copy; 2026 OMO G Trading And Interior Decoration<br>CR No: 235664 • Doha, Qatar</p>
+        </div>
     </a>
     <a href="https://wa.me/97471021381" class="floating-whatsapp" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="width: 28px; height: 28px; fill: white;">
