--- a/booking.html
+++ b/booking.html
@@ -277,7 +277,7 @@
                 <div class="alt-contact-icon">📧</div>
                 <h3>Email</h3>
                 <p>Send us detailed info about your project</p>
-                <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="9af8f5f5f1f3f4fde9daf5f7f5fdf3f4eeffe8f3f5e8e9b4f9f5f7">[email&#160;protected]</a>
+                <a href="mailto:bookings@omoginteriors.com">bookings@omoginteriors.com</a>
             </div>
             <div class="alt-contact-card">
                 <div class="alt-contact-icon">📱</div>
