--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@ margin: 0 auto;
 <div class="contact-icon">📧</div>
 <h3>Email Us</h3>
 <p>Send us your queries and we'll respond within 24 hours</p>
-<a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a>
+<a href="mailto:contact@omoginteriors.com" style="color:black; text-decoration:none;">contact@omoginteriors.com</a>
 </div>
 <div class="contact-card">
 <div class="contact-icon">📱</div>
