--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="renovations.html">Renovations</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="booking.html" class="cta-nav">Book Now</a></li>
+                <li><a href="booking.html">Book Now</a></li>
             </ul>
         </nav>
     </header>
