--- a/booking.html
+++ b/booking.html
@@ -146,15 +146,15 @@
             </div>
             <div class="booking-card">
                 <div class="booking-icon">📋</div>
-                <h3>Google Form</h3>
+                <h3>Online Booking Form</h3>
                 <p>Fill out our detailed consultation request form. Ideal for providing comprehensive project information.</p>
                 <ul class="booking-benefits">
                     <li>✓ Detailed information</li>
                     <li>✓ Structured approach</li>
-                    <li>✓ Attach references</li>
+                    <li>✓ Direct to email</li>
                     <li>✓ Better planning</li>
                 </ul>
-                <button class="booking-btn" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfOLR0Ugvq1tMgOA32Xt6oP_wyBAAyU6GYSh2anaro0rvuUJw/viewform', '_blank')">Book via Google Form</button>
+                <button class="booking-btn" onclick="window.location.href='booking-form-formspree.html'">Book via Online Form</button>
             </div>
         </div>
     </section>
@@ -313,7 +313,7 @@
             <p>Book your consultation today</p>
             <div class="cta-buttons">
                 <button class="btn-primary" onclick="window.open('https://wa.me/97471021381?text=Hello!', '_blank')" style="margin-right: 1rem;">WhatsApp Booking</button>
-                <button class="btn-primary" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfOLR0Ugvq1tMgOA32Xt6oP_wyBAAyU6GYSh2anaro0rvuUJw/viewform', '_blank')">Google Form Booking</button>
+                <button class="btn-primary" onclick="window.location.href='booking-form-formspree.html'">Online Form Booking</button>
             </div>
         </div>
     </section>
