--- a/booking-form-formspree.html
+++ b/booking-form-formspree.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Consultation - OMO G Trading And Interior Decoration</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <style>
         * {
             margin: 0;
@@ -192,6 +193,7 @@
                 <!-- Hidden fields for email subject and confirmation -->
                 <input type="hidden" name="_subject" value="New Booking Request from OMO G Website">
                 <input type="hidden" name="_cc" value="info@omoginteriors.com">
+                <input type="hidden" name="_next" value="https://omoginteriors.com/booking-success.html">
                 <input type="text" name="_gotcha" style="display:none">
                 
                 <div class="form-group">
@@ -244,6 +246,11 @@
                 <div class="form-group">
                     <label for="message">Project Details <span class="required">*</span></label>
                     <textarea id="projectDetails" name="message" required placeholder="Tell us about your project, space dimensions, style preferences, and any specific requirements..."></textarea>
+                </div>
+
+                <!-- Google reCAPTCHA -->
+                <div class="form-group" style="display: flex; justify-content: center;">
+                    <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
                 </div>
 
                 <button type="submit" class="submit-btn" id="submitBtn">
